fix(HTML): set to auto rather than scroll to hide scrollbar where possible

--- a/src/styles/semantic/definitions/lodgify-ui-components/html.less
+++ b/src/styles/semantic/definitions/lodgify-ui-components/html.less
@@ -13,7 +13,7 @@
 -----------------------*/
 
 .html-container {
-  overflow-x: scroll;
+  overflow-x: auto;
 
   > img {
     max-width: @htmlContainerImmediateImageChildMaxWidth;
